testing/tests/ui/name_mismatch_endblock.stderr
error: the previous template error derives from
 --> tests/ui/name_mismatch_endblock.rs:4:21
  |
4 | #[template(source = "{% block foo %}{% endblock not_foo %}", ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
